# the setup config file for the python package
# ----------------------------------------------------------------------------


[metadata]
name = cli-gm-lib
version = 0.1.0
author = C_ffeeStain
author_email = c.ffeestain@gmail.com
url = https://github.com/C-ffeeStain/cli-gm-lib
description = A library for command line interface games.
long_description = A library for command line interface games.
license = MIT
keywords = cli games
classifiers = [
    Programming Language :: Python :: 3
    Intended Audience :: Developers,
    License :: OSI Approved :: MIT License,
    Topic :: Games,
    Topic :: Software Development :: Libraries :: Python Modules,
    Operating System :: OS Independent
]
[options]
package_dir =
    = src
packages = find:
python-requires =
    >= 3.8
[options.packages.find]
where = src